--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "dotenv": "^16.3.1",
     "miragejs": "^0.1.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "shortid": "^2.2.16",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.2",
     "@tailwindcss/forms": "^0.5.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
